--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "express": "^4.16.3",
+    "nodemon": "^1.17.5",
     "pg-monitor": "^1.0.0",
     "pg-promise": "^8.4.4"
   }
