--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Let's make a full CRUD app!",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "nodemon": "^1.17.5",
     "pg-monitor": "^1.0.0",
