--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "method-override": "^2.3.10",
     "nodemon": "^1.17.5",
     "pg-monitor": "^1.0.0",
     "pg-promise": "^8.4.4"
